Copied code from lesson to ToDo project

--- a/ToDoList/src/ToDoList.WebApi/appsettings.json
+++ b/ToDoList/src/ToDoList.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MaximumItemsPerPage": 500,
+  "TodoListItems": {
+    "MaximumDescriptionLength": 500,
+    "DescriptionRequired": true
+  }
 }
